Palavras-chave :pencil2:

--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
         "type": "git",
         "url": "git://github.com/theuves/dicio.git"
     },
+    "keywords": [
+        "português",
+        "portuguese",
+        "dicionário",
+        "dictionary"
+    ],
     "author": "Matheus Alves",
     "license": "MIT"
 }
