--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     },
     "dependencies": {
         "iconv-lite": "^0.4.11",
-        "remover-acentos": "^0.0.2"
+        "remover-acentos": "^0.0.1",
+        "request": "^2.65.0"
     },
     "repository": {
         "type": "git",
