--- a/package.json
+++ b/package.json
@@ -5,8 +5,15 @@
   "bin": {
     "dicio": "./bin/dicio.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "desacentuador": "^1.0.0",
+    "request": "^2.88.0"
+  },
   "repository": "theuves/dicio",
   "author": "Matheus Alves",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "cheerio": "^1.0.0-rc.2",
+    "request-promise": "^4.2.2"
+  }
 }
