--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.4.0",
   "description": "Dicionário de português via linha de comando.",
   "bin": {
-    "dicio": "./bin/dicio.js"
+    "dicio": "./bin/dicio"
   },
   "dependencies": {
     "desacentuador": "^1.0.0",
