--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "repository": "theuves/dicio",
   "author": "Matheus Alves",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "request-promise": "^4.2.2"
   }
