Corrige novamente a definição dos pacotes

--- a/package.json
+++ b/package.json
@@ -6,14 +6,11 @@
     "dicio": "./bin/dicio"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "desacentuador": "^1.0.0",
-    "request": "^2.88.0"
+    "request-promise": "^4.2.2"
   },
   "repository": "theuves/dicio",
   "author": "Matheus Alves",
-  "license": "MIT",
-  "dependencies": {
-    "cheerio": "^1.0.0-rc.2",
-    "request-promise": "^4.2.2"
-  }
+  "license": "MIT"
 }
