--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "desacentuador": "^1.0.0",
+    "request": "^2.88.0",
     "request-promise": "^4.2.2"
   },
   "repository": "theuves/dicio",
