Adiciona um estilizador para printar os dados obtidos do site dicio

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "colors": "^1.3.3",
     "desacentuador": "^1.0.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
